2007-01-20  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py (PersonView.change_db): apply
	dirty flag to initial build to prevent forcing of build on load
	if the view is not in focus.

2007-01-20  Alex Roitman  <shura@gramps-project.org>
	* src/DataViews/_EventView.py (remove): Use reference map to find
	references to remove. 
	* src/ViewManager.py (undo,redo): Busy cursor.
	* src/GrampsDb/_GrampsDbBase.py (transaction_commit): Remove
	backend-specific call.
	* src/GrampsDb/_GrampsBSDDB.py (transaction_commit): Move surname
	list build to work for any batch transaction.
	* src/GrampsDb/_GrampsInMemDB.py (transaction_commit): Add method.
	* src/Utils.py (profile): Accept and pass additional arguments.
	* src/DataViews/_PersonView.py (delete_person_response): Busy cursor;
	Use reference map to find references to remove.

2007-01-19  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: add append_list task
	* src/GrampsDb/_ReadGrdb.py: copy bookmarks properly on import
	* src/DataViews/_FamilyList.py: remove loop
	* src/PageView.py: check for null model

2007-01-19  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsInMemDB.py: Support the cached surname list.
	* src/GrampsDb/_GrampsBSDDB.py: Support the cached surname list.
	* src/GrampsDb/_GrampsDbBase.py: Support the cached surname list.

2007-01-18  Don Allingham  <don@gramps-project.org>
	* src/DataViews/Utils.py: add profile function

2007-01-18 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
        * src/NameDisplay.py: yet more optimisations for name display.

2007-01-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Cache result of probably_alive(); Call
	find_tree() only once for all sizes; Cache results in FormattingHelper;

2007-01-17  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: optimizations
	* src/ViewManager.py: optimizations
	* src/gramps_main.py: optimizations