@@ -1,7 +1,8 @@
 2007-01-20  Don Allingham  <don@gramps-project.org>
+	* src/QuestionDialog.py: close window before calling callback
 	* src/DataViews/_PersonView.py (PersonView.change_db): apply
 	dirty flag to initial build to prevent forcing of build on load
-	if the view is not in focus.
+	if the view is not in focus. Fix delete display by calling build_tree
 
 2007-01-20  Alex Roitman  <shura@gramps-project.org>
 	* src/DataViews/_EventView.py (remove): Use reference map to find
